카카오맵 띄우기
defaultPos - 기본 위치 설정 (판교테크노밸리)
mapContainer - 설정한 위치로 카카오맵 객체 생성

--- a/카카오지도 사용하기/index.html
+++ b/카카오지도 사용하기/index.html
@@ -9,7 +9,7 @@
     <title>Kakaomap</title>
     <link rel="stylesheet" href="../../utils/reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=34ca9480b5aa101ff8f9ad5666516109"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	34ca9480b5aa101ff8f9ad5666516109"></script>
   </head>
 
   <body>
