파일 업로드 기능 구현
inputfile 태그에 파일을 드래그앤드롭하여 업로드 되도록 구현

--- a/파일up&download연습/index.html
+++ b/파일up&download연습/index.html
@@ -6,13 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>Photo Editor</title>
+    <title>fileupload</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <main>
-      <h1>Photo Editor</h1>
+      <h1>fileupload</h1>
       <section>
         <div class="editor_wrap">
           <div class="drag_area">
